update user handler
